--- a/Micro Game Engine.cbp
+++ b/Micro Game Engine.cbp
@@ -40,6 +40,7 @@
 		<Linker>
 			<Add library="sfml-graphics" />
 			<Add library="sfml-window" />
+			<Add library="sfml-audio" />
 			<Add library="sfml-system" />
 		</Linker>
 		<Unit filename="Behaviour.cpp" />
